# cartograph

./: .gitignore  CLAUDE.md  Makefile  README.md  apm.yml  pyproject.toml
.apm/instructions/: cartograph.instructions.md
.claude/: settings.json
.claude/agents/: lens-discipline-reviewer.md
.claude/hooks/: lens_discipline.py
.github/workflows/: quality.yml
cartograph/: __init__.py  cgc.py  cli.py  discover.py  discovery.py  engine.py  graph.py  graph_engine.py  indexer.py  install.py  layers.py  lens_runner.py  lens_schema.py  lens_specs.py  lenses.py  linkers.py  models.py  pack_loader.py  plugins.py  query.py  report.py  schema.py  search.py  serve.py  tools.py  trace.py  tree_sitter_strategy.py  util.py  verify.py  views.py
cartograph/lens_defs/: activemq-java-direct.json  amqplib.json  angular-component.json  apollo-client.json  aws-sdk-java.json  aws-sdk-js.json  axon.json  azure-servicebus-java.json  azure-servicebus-js.json  bullmq.json  camel-pojo-bindings.json  camel-route.json  cassandra-java.json  dropwizard.json  elasticsearch-java.json  eventuate-tram.json  express-routes.json  fastify.json  gcp-pubsub-java.json  hapi.json  (+81 more)
docs/: SHARED-CONTEXT.md  cartograph-layers.md  cartograph-schemas.md  cartograph-strategy.md  m1-indexable.md  m1.5-llm-assisted-extraction.md  m2-queryable.md  m3-visible.md  schema.md
fixtures/: real-repos.json
scripts/: eval_repo.py  prepare_real_repos.py  quality.sh  update_golden.py  verify_real_repos.sh
tests/: conftest.py  test_builtin_lenses.py  test_class_supertype_typearg.py  test_cli.py  test_constants_resolution.py  test_engine.py  test_executor.py  test_graph_engine.py  test_graph_schema.py  test_ids.py  test_incremental.py  test_java_lens_index.py  test_layers_m1.py  test_lens_coverage_fixture.py  test_lens_runner.py  test_lens_runner_resolve.py  test_lens_schema.py  test_linker_http.py  test_linker_new_edges.py  test_m2_golden.py  test_m2_queryable.py  test_method_call_js_binding.py  test_method_call_receiver_filter.py  test_models.py  test_pack_loader.py  test_search.py  test_snapshot.py  test_templates.py  test_tree_sitter.py  test_xml_query_ancestor.py  test_xml_query_lineno.py
(+155 files in other folders)
